[project]
name = "travel-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fakeredis>=2.34.1",
    "fastapi>=0.131.0",
    "freezegun>=1.5.5",
    "httpx>=0.28.1",
    "langchain>=1.2.8",
    "langchain-openai>=1.1.7",
    "langgraph>=1.0.7",
    "langgraph-checkpoint-redis>=0.3.4",
    "langsmith>=0.6.8",
    "logging>=0.4.9.6",
    "openai>=2.16.0",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "pytest-sugar>=1.1.1",
    "pytest-xdist>=3.8.0",
    "python-dotenv>=1.2.1",
    "redis>=7.1.0",
    "tiktoken>=0.12.0",
    "trustcall>=0.0.39",
    "uvicorn>=0.41.0",
]
